--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <title>Title</title>
+    <style>
+        .d-inline {
+            display: inline-block;
+        }
+        .mr-2 {
+            margin-right: 2rem;
+        }
+        .table-book {
+            background-color: #eee;
+        }
+    </style>
 </head>
 <body>
     Hello World! 123
