--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <style>
+        .flex-grid {
+            display: flex;
+            align-items: stretch;
+        }
         .d-inline {
             display: inline-block;
         }
@@ -14,6 +18,7 @@
             margin-right: 10px;
         }
         .fig-book {
+            width: 200px;
             background-color: #eee;
             padding: 7px 7px 15px 7px;
             border-radius: 2px;
@@ -21,20 +26,21 @@
             margin: 0;
             cursor: pointer;
             border: 1px solid transparent;
+            height: 100%;
         }
         .fig-book:hover {
             border-color: #333;
         }
-
         .fig-book img {
             margin-bottom: 10px;
-            width: 100%;
-            max-height: 200px;
+            height: 200px;
             background-color: #333;
-            display: block;
         }
         .fig-book figcaption {
             line-height: 1.3;
+        }
+        .fig-img {
+            text-align: center;
         }
         .label {
             font-weight: bold;
