--- a/index.html
+++ b/index.html
@@ -18,15 +18,17 @@
             margin-right: 10px;
         }
         .fig-book {
-            width: 200px;
+            width: 145px;
             background-color: #eee;
-            padding: 7px 7px 15px 7px;
-            border-radius: 2px;
+            padding: 7px 7px 7px 7px;
+            border-radius: 5px;
             color: #333;
             margin: 0;
             cursor: pointer;
             border: 1px solid transparent;
             height: 100%;
+            transition: border-color 0.5s;
+            align-items: stretch;
         }
         .fig-book:hover {
             border-color: #333;
@@ -34,7 +36,9 @@
         .fig-book img {
             margin-bottom: 10px;
             height: 200px;
+            width: 140px;
             background-color: #333;
+            overflow: hidden;
         }
         .fig-book figcaption {
             line-height: 1.3;
@@ -51,10 +55,48 @@
         .label-text {
             font-size: 14px;
         }
+        .book-category{
+            margin: 0 40px 40px 40px;
+            position: relative;
+        }
+        .book-category h2 {
+            margin: 0 0 5px 0;
+            font-weight: 500;
+            font-size: 50px;
+            font-family: fantasy;
+        }
+        .book-category div {
+            transition: margin-left 0.5s;
+        }
+        .book-category button {
+            background-color: #333;
+            border: none;
+            box-shadow: none;
+            color: white;
+            font-weight: 400;
+            font-size: 20px;
+            border-radius: 2px;
+            padding: 50px 10px 50px 10px;
+            cursor:pointer;
+            transition: opacity 0.5s;
+        }
+        .book-category button:hover{
+            opacity: 0.8;
+        }
+        .book-category .previous {
+            position: absolute;
+            left: -40px;
+            top: 50%;
+        }
+        .book-category .next {
+            position: absolute;
+            right: -40px;
+            top: 50%;
+        }
     </style>
 </head>
 <body>
-    Loading...
-    <script src="index.js"></script>
+Loading...
+<script src="index.js"></script>
 </body>
 </html>
