Improve book scrolling

--- a/index.html
+++ b/index.html
@@ -55,9 +55,13 @@
         .label-text {
             font-size: 14px;
         }
-        .book-category{
-            margin: 0 40px 40px 40px;
+        .book-category {
+            margin: 20px 50px 30px 50px;
             position: relative;
+        }
+        .book-category > div {
+            overflow-x: hidden;
+            padding-bottom: 20px;
         }
         .book-category h2 {
             margin: 0 0 5px 0;
@@ -85,13 +89,16 @@
         }
         .book-category .previous {
             position: absolute;
-            left: -40px;
+            left: -42px;
             top: 50%;
         }
         .book-category .next {
             position: absolute;
             right: -40px;
             top: 50%;
+        }
+        body {
+            margin: 0;
         }
     </style>
 </head>
