--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             cursor: pointer;
             border: 1px solid transparent;
             height: 100%;
-            transition: border-color 0.5s;
+            transition: all 0.5s;
             align-items: stretch;
         }
         .fig-book:hover {
@@ -40,6 +40,15 @@
             background-color: #333;
             overflow: hidden;
         }
+        /* Fig book active styling */
+        .fig-book.active {
+            width: 290px;
+        }
+        .fig-book.active img {
+            height: 100%;
+            width: 140px;
+        }
+
         .fig-book figcaption {
             line-height: 1.3;
         }
@@ -56,7 +65,7 @@
             font-size: 14px;
         }
         .book-category {
-            margin: 20px 50px 30px 50px;
+            margin: 20px 0 30px 15px;
             position: relative;
         }
         .book-category > div {
@@ -82,19 +91,20 @@
             border-radius: 2px;
             padding: 50px 10px 50px 10px;
             cursor:pointer;
+            opacity: 0.5;
             transition: opacity 0.5s;
         }
         .book-category button:hover{
-            opacity: 0.8;
+            opacity: 1;
         }
         .book-category .previous {
             position: absolute;
-            left: -42px;
+            left: 0;
             top: 50%;
         }
         .book-category .next {
             position: absolute;
-            right: -40px;
+            right: 15px;
             top: 50%;
         }
         body {
